Fixed issues with word wrap

--- a/editor-style.css
+++ b/editor-style.css
@@ -95,3 +95,10 @@ img.alignright {
   float: right;
   margin: 0 0 15px 15px;
 }
+
+@media all and (max-width: 600px) {
+  /* line 99, sass/_typography.scss */
+  p, h1, h2, h3, h4, li {
+    word-wrap: break-word;
+  }
+}
