--- a/style.css
+++ b/style.css
@@ -171,6 +171,12 @@ img.alignright {
   margin: 0 0 15px 15px;
 }
 
+@media all and (max-width: 600px) {
+  /* line 99, sass/_typography.scss */
+  p, h1, h2, h3, h4, li {
+    word-wrap: break-word;
+  }
+}
 /* line 42, sass/style.scss */
 html {
   min-height: 100%;
